# Guides

./: .gitignore  README.md
cpp/intro-to-asynchronous-and-multithreaded-programming/: package-lock.json  package.json  slides.md
presentation/intro-to-asynchronous-and-multithreaded-programming/: package-lock.json  package.json
src/circle_counter/: CMakeLists.txt
src/circle_counter/etc/: default_config.yaml
src/circle_counter/src/: main.cpp
src/circle_counter/src/include/: circle_counter.hpp  common_types.hpp  config_handler.hpp  console_base.hpp  editor_base.hpp
src/git/: .remote_repositories  sync.py
src/ml/: opencv_onnx_inferring.hpp  opencv_protobuf_inferring.hpp  opencv_protobuf_inferring.ipynb  tensorflow_protobuf_inferring.hpp
src/module/: multi_threading_guide_congested_atomic.cpp  multi_threading_guide_semaphore.cpp
src/mutex/: atomic_mutex.hpp
src/qr_cpp/: CMakeLists.txt
src/qr_cpp/src/: main.cpp
src/qr_cpp/src/include/: qr_cpp.hpp
src/queue/: atomic_queue_limited.hpp  atomic_smph_queue.hpp  broken_atomic_queue.hpp  mutex_cv_queue.hpp
src/ringbuffer/: example_for_ringbuffer.cpp  ringbuffer.hpp
src/synchronize/: connector.hpp
src/tpi/: tensorflow_ protobuf_inferring.hpp
src/utilities/: fast_in_range.hpp  time_utils.cpp
